--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
 <!-- Container is to wrap everything -->
 <div id="container">
 <!-- Website Brand -->
-    <header style="font-size: 36px;">Chino Hills Pets Adoption Service</header>
+    <header>Chino Hills Pets Adoption Service</header>
 <!-- Main Navigation -->    
     <nav>
         <ul>
@@ -20,11 +20,17 @@
     <main>
 <br><h1>Ready to Adpot a pet?</h1>
 <p>Let's get started and you can find your pet here!</p>
-<img src="image/home_page1.jpeg" alt="Pet Adoption" width="500">
+<div class="film-strip">
+    <img src="image/dog6.jpeg" alt="Pet Adoption">
+    <img src="image/dog7.jpeg" alt="Pet Adoption">
+    <img src="image/dog8.jpeg" alt="Pet Adoption">
+    <img src="image/dog9.jpeg" alt="Pet Adoption">
+    <img src="image/dog10.jpeg" alt="Pet Adoption">
+</div>
 <h3>Introduction</h3>
 <p>At Chino Hills Pets Adoption Service, we offer a diverse range of pets waiting to find their forever homes. From playful puppies and kittens to serene adult dogs and cats, we have a pet that will perfectly complement your lifestyle. We also provide a home for smaller animals like rabbits, guinea pigs, and birds. The adoption process is designed to be simple yet thorough. Prospective adopters are first invited to visit our facility to meet our wonderful animals. After choosing a pet that you connect with, you'll go through a short interview and complete some paperwork to ensure a responsible and lasting match. Our staff will guide you every step of the way, from the initial visit to post-adoption support, to ensure a smooth transition for both the pet and its new family.</p>
 <br><h3>Available Pets</h3>
-<table border="1" style="width:50%;">
+<table>
     <caption>Avaiable Pets</caption>
     <thead>
        <tr>
@@ -83,7 +89,7 @@
     </main>
 <!-- Footer -->
     
-    <footer style="text-align: center;">
+    <footer>
         <br>Contact us:<br>
         Email:info@chinohillspet<br>
         Phone: (123)456-7890<br>
