--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
 <!-- Container is to wrap everything -->
 <div id="container">
 <!-- Website Brand -->
-    <header style="font-size: 36px;">Chino Hills Pets Adoption Service</header>
+    <header>Chino Hills Pets Adoption Service</header>
 <!-- Main Navigation -->    
     <nav>
         <ul>
@@ -20,7 +20,13 @@
     <main>
 <br><h1>Ready to Adpot a pet?</h1>
 <p>Let's get started and you can find your pet here!</p>
-<img src="image/home_page1.jpeg" alt="Pet Adoption" width="500">
+<div class="film-strip">
+    <img src="image/dog6.jpeg" alt="Pet Adoption">
+    <img src="image/dog7.jpeg" alt="Pet Adoption">
+    <img src="image/dog8.jpeg" alt="Pet Adoption">
+    <img src="image/dog9.jpeg" alt="Pet Adoption">
+    <img src="image/dog10.jpeg" alt="Pet Adoption">
+</div>
 <h1>Contacting Us.</h1>
       <p>If you need more information about the Chino Hills Pets Adoption Service, Hours of Operations, how to adopt a pet or questions about this site, please contact us bu using one of the following:</p>
       <h3>Phone:</h3>
