--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- Container is to wrap everything -->
 <div id="container">
 <!-- Website Brand -->
-    <header style="font-size: 36px;">Chino Hills Pets Adoption Service</header>
+    <header>Chino Hills Pets Adoption Service</header>
 <!-- Main Navigation -->    
     <nav>
         <ul>
@@ -20,7 +20,13 @@
     <main>
 <br><h1>Ready to Adpot a pet?</h1>
 <p>Let's get started and you can find your pet here!</p>
-<img src="image/home_page1.jpeg" alt="Pet Adoption" width="500">
+<div class="film-strip">
+    <img src="image/dog6.jpeg" alt="Pet Adoption">
+    <img src="image/dog7.jpeg" alt="Pet Adoption">
+    <img src="image/dog8.jpeg" alt="Pet Adoption">
+    <img src="image/dog9.jpeg" alt="Pet Adoption">
+    <img src="image/dog10.jpeg" alt="Pet Adoption">
+</div>
 <h3>Who are we?</h3>
 <p>Welcome to "Chino Hills Pet Adoption," your local haven for finding your new best friend. Established in 2010, our community-driven organization is committed to rescuing homeless animals and matching them with loving families. Our mission is simple yet impactful: "Saving Lives, Creating Families." Over the past decade, we've successfully placed over 5,000 pets in forever homes, and our work doesn't stop there. We also engage in community education on responsible pet ownership and offer free spay/neuter programs. When you adopt from us, you're not just gaining a pet; you're joining a community committed to animal welfare.</p>
 <br><h3>How It works?</h3>
@@ -41,7 +47,7 @@
     </main>
 <!-- Footer -->
     
-    <footer style="text-align: center;">
+    <footer>
         <br>Contact us:<br>
         Email:info@chinohillspet<br>
         Phone: (123)456-7890<br>
